--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,2 @@
-appnope~=0.1.3
-asttokens~=2.4.1
-background~=0.2.1
-certifi~=2023.7.22
-cffi~=1.16.0
-charset-normalizer~=3.3.2
-comm~=0.2.1
-cryptography~=41.0.5
-debugpy~=1.8.0
-decorator~=5.1.1
-docutils~=0.20.1
-emoji~=2.9.0
-executing~=2.0.1
-gpxpy~=1.6.1
-idna~=3.4
-ipykernel~=6.28.0
-ipython~=8.20.0
-jedi~=0.19.1
-jupyter_client~=8.6.0
-jupyter_core~=5.6.1
-lxml~=4.9.3
-MarkupSafe~=2.1.3
-matplotlib-inline~=0.1.6
-mock~=5.1.0
-nest-asyncio~=1.5.8
-nose~=1.3.7
-numpy~=1.26.2
-packaging~=23.2
-parso~=0.8.3
-pexpect~=4.9.0
-platformdirs~=4.1.0
-polyline~=2.0.1
-prompt-toolkit~=3.0.43
-psutil~=5.9.7
-ptyprocess~=0.7.0
-pure-eval~=0.2.2
-PyAudio~=0.2.14
-pycparser~=2.21
-Pygments~=2.17.2
-pyobjc-core~=10.0
-pyobjc-framework-Cocoa~=10.0
-pyobjc-framework-Quartz~=10.0
-pysine~=0.9.2
-python-dateutil~=2.8.2
-python-tcxparser~=2.3.0
-pytz~=2023.3.post1
-PyYAML~=6.0.1
-pyzmq~=25.1.2
-requests~=2.31.0
-six~=1.16.0
-stack-data~=0.6.3
-swaggerpy~=0.2.1
-tcx2gpx~=0.1.5
-tornado~=6.4
-tqdm~=4.66.1
-traitlets~=5.14.1
-urllib3~=2.0.7
-wcwidth~=0.2.12
-websocket-client~=1.6.4
+Requests==2.31.0
+urllib3==1.26.12
