--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -32,8 +32,8 @@ jobs:
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v4
         # Commonly enabled options, see https://github.com/actions/dependency-review-action#configuration-options for all available options.
-        # with:
-        #   fail-on-severity: moderate
+        with:
+          fail-on-severity: moderate
         #   deny-licenses: GPL-1.0-or-later, LGPL-2.0-or-later
-        #   comment-summary-in-pr: true
+          comment-summary-in-pr: true
         #   retry-on-snapshot-warnings: true
